Fix link display on Firefox

--- a/src/styles/main/_scorecard.scss
+++ b/src/styles/main/_scorecard.scss
@@ -1024,6 +1024,10 @@ $steam-color: #f7c34e;
           text-transform: uppercase;
         }
 
+        .link-text {
+          display: block;
+        }
+
         p {
           font-weight: bold;
         }
